...
                        Icons.Filled.KeyboardArrowLeft,
                        enabled = canNavigate,
                        onClick = { onNavigate(LauncherDirection.LEFT) },
                    )
                    WingKey(
                        "",
                        if (navigationIsSelection) "Select game to the right" else "Move focus right",
                        Modifier.align(Alignment.CenterEnd),
                        Icons.Filled.KeyboardArrowRight,
                        enabled = canNavigate,
                        onClick = { onNavigate(LauncherDirection.RIGHT) },
                    )
                    WingKey(
...
